--- a/package.json
+++ b/package.json
@@ -11,13 +11,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/http-status": "^1.1.2",
+    "@types/joi": "^17.2.3",
+    "@types/pg": "^8.6.6",
+    "@types/uuid": "^9.0.1",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "http-status": "^1.6.2",
     "joi": "^17.9.1",
     "pg": "^8.10.0",
     "uuid": "^9.0.0"
